AquaticAlchemy/force-app/main/default/objects/Class_Instructor__c/Class_Instructor__c.object-meta.xml
<CustomObject>
    <label>Class Instructor</label>
    <nameField>
        <label>Class Instructor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instructors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>