AquaticAlchemy/force-app/main/default/objects/Class_Instructor__c/fields/Home__c.field-meta.xml
<CustomField>
    <fullName>Home__c</fullName>
    <label>Home</label>
    <type>TextArea</type>
</CustomField>