AquaticAlchemy/force-app/main/default/objects/Class_Instructor__c/fields/Instructor_Photo__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Photo__c</fullName>
    <label>Instructor Photo</label>
    <type>Url</type>
</CustomField>